// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/users DELETE /:userId delete a user 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/users DELETE /:userId delete a user fail due to being a manager 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/users GET / / - retrieve users 1`] = `
Object {
  "entities": Object {
    "users": Object {
      "5668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "avatarUrl": null,
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "permissionId": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "role": "OWNER",
        "sendBookingRequestEmail": true,
        "username": "owner@test.com",
      },
    },
  },
  "result": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;

exports[`/api/users GET / /:userId - retrieve user from id 1`] = `
Object {
  "entities": Object {
    "users": Object {
      "5668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "avatarUrl": null,
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "permissionId": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "role": "OWNER",
        "sendBookingRequestEmail": true,
        "username": "owner@test.com",
      },
    },
  },
  "result": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;

exports[`/api/users GET / /me - retrieve user from token 1`] = `
Object {
  "account": Object {
    "EnterpriseId": null,
    "address": Object {
      "city": null,
      "country": "CA",
      "id": "62954242-3652-4792-bae5-5bfed53d37b7",
      "state": null,
      "street": null,
      "timezone": null,
      "zipCode": null,
    },
    "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
    "autoRespondOutsideOfficeHoursLimit": null,
    "bookingWidgetPrimaryColor": null,
    "bufferAfterClosing": null,
    "bufferBeforeOpening": null,
    "bumpInterval": "2 weeks",
    "callrailId": null,
    "canAutoRespondOutsideOfficeHours": false,
    "canSendRecalls": false,
    "canSendReminders": false,
    "canSendReviews": false,
    "cellPhoneNumberFallback": Array [
      "mobilePhoneNumber",
      "otherPhoneNumber",
      "homePhoneNumber",
    ],
    "clinicName": null,
    "contactEmail": null,
    "destinationPhoneNumber": "+16041234567",
    "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
    "facebookUrl": null,
    "fullLogoUrl": null,
    "googlePlaceId": null,
    "hygieneInterval": "6 months",
    "id": "62954241-3652-4792-bae5-5bfed53d37b7",
    "isChairSchedulingEnabled": false,
    "lastReviewInterval": "1 years",
    "lastSentReviewInterval": "1 months",
    "lastSyncDate": null,
    "logo": null,
    "massOnlineEmailSentDate": null,
    "name": "Test Account",
    "omitChairIds": Array [],
    "omitPractitionerIds": Array [],
    "phoneNumber": null,
    "recallBuffer": "1 days",
    "recallEndTime": "20:00:00",
    "recallInterval": "6 months",
    "recallStartTime": "17:00:00",
    "reviewsInterval": "15 minutes",
    "sendRequestEmail": true,
    "sendUnconfirmedReviews": false,
    "suggestedChairId": null,
    "syncClientAdapter": null,
    "timeInterval": 30,
    "timezone": "America/Vancouver",
    "twilioPhoneNumber": "+16043333333",
    "unit": 15,
    "vendastaAccountId": null,
    "vendastaId": null,
    "vendastaMsId": null,
    "vendastaSrId": null,
    "website": null,
    "weeklyScheduleId": null,
  },
  "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "enterprise": Object {
    "id": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
    "name": "Test Enterprise",
    "plan": "GROWTH",
  },
  "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  "entities": Object {},
  "role": "MANAGER",
  "timezone": "America/Vancouver",
  "user": Object {
    "firstName": "Harvey",
    "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
    "lastName": "Dentest",
    "username": "manager@test.com",
  },
  "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;

exports[`/api/users PUT /:userId update a user 1`] = `
Object {
  "entities": Object {
    "users": Object {
      "6668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "avatarUrl": null,
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "sendBookingRequestEmail": true,
        "username": "manager@test.com",
      },
    },
  },
  "result": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
}
`;
